# hermes-reach

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  TEAM.md  create-burner-ig.js  package-lock.json  package.json  pyproject.toml  stealth-extract.js
docs/: boss-architecture.md  comparative-landscape.md  product-guardrail-audit-2026-06-15.md  weekly-operating-loop.md
hermes_reach/: __init__.py  channels.py  cli.py  router.py  search.py
hermes_trailhead/: __init__.py  backends.py  benchmarks.py  cli.py  extract.py  formatters.py  gauntlet.py  scoring.py  search.py
source_scout/: formatters.py
tests/: test_backends.py  test_benchmarks.py  test_channels.py  test_cli.py  test_contracts.py  test_extract.py  test_gauntlet.py  test_router.py  test_scoring.py  test_search.py  test_team_enforcement.py
