[project]
name = "hermes-trailhead"
version = "0.1.0"
description = "Make hard-to-reach, high-signal internet sources part of Hermes research without paid APIs by default"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [{name = "Raymond Delgado / Onchito"}]
dependencies = []

[project.scripts]
hermes-trailhead = "hermes_trailhead.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_trailhead"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
